@@ -1,3 +1,8 @@
+2006-04-13  Alex Roitman  <shura@gramps-project.org>
+	* src/Editors/_EditPerson.py (reorder_child_ref_list): Use
+	child_ref_list. 
+	* src/RelLib/_ChildRef.py (serialize): Typo.
+
 2006-04-13  Don Allingham  <don@gramps-project.org>
 	* various: start childref conversion
 
